    (LP: #845487)
  * requestsync: Add nice error messages to gpg-signing code, rather than
    simple assertions (LP: #537288)
  * submittodebian:
    - Don't parse the entire changelog, to avoid bumping into past illegal
      version numbers (LP: #727314)
    - Iterate over changelog blocks rather than using Changelog's private
      _blocks list.
  * ubuntutools.update_maintainer: Don't use strict changelog parsing
    (LP: #806633)
  * setup-packaging-environment:
    - Software Sources isn't on the Administration menu, post Gnome 2
      (LP: #841975)
    - Use apt-get rather than aptitude.
  * Removed get-build-deps, mk-build-deps -ir is equivalent (LP: #158108)

  [ Colin Watson ]
  * syncpackage: Fix typo.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 08 Sep 2011 23:13:05 +0200

ubuntu-dev-tools (0.130) unstable; urgency=low

  * pull-lp-source: Support source packages with a bad version string
    (LP: #844682).
  * backportpackage:
    - Search for newer versions in -{updates,security} on Ubuntu (LP: #823833).
    - Use Ubuntu and Debian as fall back check in codename_to_distribution to
      allow backporting to Ubuntu from a Debian system (LP: #823832).

 -- Benjamin Drung <bdrung@debian.org>  Thu, 08 Sep 2011 22:04:11 +0200

ubuntu-dev-tools (0.129) unstable; urgency=low

  [ Colin Watson ]
  * syncpackage: Convert to new LP API, with --no-lp available for the old
    style of operation.
  * syncpackage: Require -f/--force option to overwrite Ubuntu changes.

  [ Jelmer Vernooij ]
  * Remove several tools not specific to Ubuntu that have been migrated to
    lptools (LP: #708886):
   - get-branches (renamed to lp-get-branches)
   - grab-attachments (renamed to lp-grab-attachments)
   - lp-project-upload
   - lp-list-bugs
   - lp-set-dup
   - lp-shell

  [ Stefano Rivera ]
  * syncpackage: Show changes to be synced when performing native syncs.
  * syncpackage: Check the sync blacklist.